--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,8 @@
 [DEFAULT]
-SENDER_EMAIL=<>
-PASSWORD=<>
+[DEFAULT]
+SENDER_EMAIL=chetnadang16@gmail.com
+PASSWORD=kjwyquipzvpauxvv
 EMAIL_BODY=This is a config email
-EMAIL_SUBJECT=iNeuron Course Details
-SALES_TEAM_EMAIL= <>
-SALES_TEAM_EMAIL_SUBJECT=LEAD GENERATED
+EMAIL_SUBJECT=Sanjivani College of Engineering Course Details
+SALES_TEAM_EMAIL=psaiprasadcse@gmail.com
+SALES_TEAM_EMAIL_SUBJECT=Course Enquiry
